--- a/projeto site 1.html
+++ b/projeto site 1.html
@@ -12,14 +12,14 @@
       <nav>0456</nav>
      </header>
     <div>
-      <!--<div id="div_cental">
+      <div id="div_cental">
         <h1>giro loko</h1>
         <video width="520" height="530" controls>
         <source src="meuvideo.mp4" type="video/mp4">
         <source src="meuvideo.ogg" type="video/ogg">
         Your browser does not support the video tag.
        </video>
-      </div>-->
+      </div>
      <div id="div_direita">
        <p>propraganda 1</p>
        vou levar tudo .com
@@ -29,10 +29,6 @@
      </div>
     <footer> <p> o fim</p> </footer>
   </div>
-  <video width="520" height="530" controls>
-    <source src="meuvideo.mp4" type="video/mp4">
-    <source src="meuvideo.ogg" type="video/ogg">
-    Your browser does not support the video tag.
-   </video>
+  
  </body>
 </html>
