--- a/projeto site 1.html
+++ b/projeto site 1.html
@@ -2,8 +2,9 @@
 <html lang="pt-BR">
  <head>
  <meta charset="utf-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>MUNDO_NOVO</title>
- <link rel="stylesheet" type="text/css" href="arquivos.css">
+ 
  </head>
  <body>
   <div class="container">
@@ -11,8 +12,7 @@
       <p>bem-vindo ao mundo</p>
       <nav>0456</nav>
      </header>
-    <div>
-      <div id="div_cental">
+      <div class="div_cental">
         <h1>giro loko</h1>
         <video width="520" height="530" controls>
         <source src="meuvideo.mp4" type="video/mp4">
@@ -20,19 +20,14 @@
         Your browser does not support the video tag.
        </video>
       </div>
-     <div id="div_direita">
-       <p>propraganda 1</p>
-       vou levar tudo .com
+     <div class="div_direita">
+       <p>propraganda 1
+       vou levar tudo .com</p>
      </div>
-     <div id="div_esqueda">
+     <div class="div_esqueda">
        <p>propaganda 2</p>
      </div>
     <footer> <p> o fim</p> </footer>
   </div>
-  <video width="520" height="530" controls>
-    <source src="meuvideo.mp4" type="video/mp4">
-    <source src="meuvideo.ogg" type="video/ogg">
-    Your browser does not support the video tag.
-   </video>
  </body>
 </html>
